fixed footer spacing

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -104,6 +104,11 @@
         }
     }
     @media screen and (min-width: 768px) {
-        padding-block: 5rem;
+        padding-block: 3rem;
+    }
+    #scrollToTop {
+        position: absolute;
+        right: 1rem;
+        bottom: 1rem;
     }
 }
